--- a/package.json
+++ b/package.json
@@ -13,20 +13,21 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "eslintConfig": {
-    "extends": "eslint-config-synacor"
-  },
   "devDependencies": {
     "eslint": "^4.2.0",
-    "eslint-config-synacor": "^1.0.1",
     "if-env": "^1.0.0",
     "node-sass": "^4.5.3",
     "preact-cli": "^1.3.0",
     "sass-loader": "^6.0.6"
   },
   "dependencies": {
+    "bulma": "^0.4.3",
     "preact": "^8.2.0",
     "preact-compat": "^3.16.0",
-    "preact-router": "^2.5.4"
+    "preact-redux": "^2.0.2",
+    "preact-router": "^2.5.4",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
+    "styled-components": "^2.1.1"
   }
 }
